--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">portfolio</string>
+    <!-- basic -->
+    <string name="app_name">Portfolio</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
     <!-- drawer string list -->
     <string name="drawer_open">Open !</string>
     <string name="drawer_close">Close !</string>
-    <string name="drawer_resume">Resume</string>
-    <string name="drawer_project">Project</string>
-    <string name="drawer_contact">Contact</string>
+    <string name="drawer_resume">CV</string>
+    <string name="drawer_project">Projets</string>
+    <string name="drawer_profile">Profil</string>
+
+    <!-- Project Detail -->
+    <string name="project_detail_detail">Details</string>
+    <string name="project_detail_screenshot">Captures d\'écrans</string>
+    
+    <!-- Project Sum -->
+    <string name="project_sum_more_information">Plus d\'informations</string>
 
     <!-- Contact -->
     <string name="contact_cant_use_call">Etant actuellement en Corée du Sud dans le cadre de mes études il est impossible de me contacter autrement que par email avant mon retour le 7 juillet.</string>
+    <string name="contact_motivation_title">Motivation</string>
 
-    <!-- Contact -->
-    <string name="common_close">Open !</string>
-    
+    <!-- Common -->
+    <string name="common_close">Fermer</string>
+
 </resources>
